FIx the stories.js in the library
